# backend-rust-axum

./: .env.example  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/articles/: requests.rs  responses.rs
crates/domain/src/users/: responses.rs
crates/infra/: Cargo.toml
crates/infra/src/: connection_pool.rs
