[workspace]
members = [
    # our runnable applications
    "crates/bin",
    # our dependent library crates
    "crates/api",
    "crates/core",
    "crates/domain",
    "crates/infra",
]
resolver = "3"

[profile.release]
debug = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
lazy_static = "1.4.0"