[workspace]
members = [
    # our runnable applications
    "crates/bin",
    # our dependent library crates
    "crates/api",
    "crates/core",
    "crates/domain",
    "crates/infra",
]
resolver = "3"

[profile.release]
debug = true

[workspace.dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time", "offline"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1"
validator = { version = "0.15", features = ["derive"] }